--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,74 @@
 <h1>
   {{title}}
 </h1>
+<h2>手风琴效果</h2>
+<accordion>
+  <accordion-group heading="Static Header, initially expanded">
+    This content is straight in the template.
+  </accordion-group>
+  <accordion-group #group>
+    <div accordion-heading>
+      I can have markup, too!
+      <i class="pull-right float-xs-right glyphicon"
+         [ngClass]="{'glyphicon-chevron-down': group?.isOpen, 'glyphicon-chevron-right': !group?.isOpen}"></i>
+    </div>
+    This is just some content to illustrate fancy headings.
+  </accordion-group>
+  <accordion-group heading="Content 1">
+    <p>Content 1</p>
+  </accordion-group>
+  <accordion-group heading="Content 2">
+    <p>Content 2</p>
+  </accordion-group>
+</accordion>
+
+<h2>Alert</h2>
+<alert type="success">
+  <strong>Well done!</strong> You successfully read this important alert message.
+</alert>
+<alert type="info">
+  <strong>Heads up!</strong> This alert needs your attention, but it's not super important.
+</alert>
+<alert type="warning">
+  <strong>Warning!</strong> Better check yourself, you're not looking too good.
+</alert>
+<alert type="danger">
+  <strong>Oh snap!</strong> Change a few things up and try submitting again.
+</alert>
+
+<h2>Button</h2>
+<pre class="card card-block card-header">{{singleModel}}</pre>
+<button type="button" class="btn btn-primary"
+        [(ngModel)]="singleModel" btnCheckbox
+        btnCheckboxTrue="1" btnCheckboxFalse="0">
+  Single Toggle
+</button>
+
+<h2>轮播图</h2>
+<carousel class="lunbo_container">
+  <slide>
+    <img src="assets/images/nature/1.jpg" alt="First slide">
+  </slide>
+  <slide>
+    <img src="assets/images/nature/2.jpg" alt="Second slide">
+  </slide>
+  <slide>
+    <img src="assets/images/nature/3.jpg" alt="Third slide">
+  </slide>
+</carousel>
+
+<h2>折叠</h2>
+<button type="button" class="btn btn-primary"
+        (click)="isCollapsed = !isCollapsed">Toggle collapse
+</button>
+<hr>
+<!--<div (collapsed)="collapsed($event)"
+     (expanded)="expanded($event)"
+     [collapse]="isCollapsed"
+     class="card card-block card-header">
+  <div class="well well-lg">Some content</div>
+</div>-->
+<div [collapse]="isCollapsed"
+    class="card card-block card-header">
+  <div class="well well-lg">Some content</div>
+</div>
